# djangowander

./: README.md  manage.py  requirements.txt
.github/workflows/: django.yml
djangowander/: asgi.py  settings.py  urls.py  wsgi.py
wander_core/: README.md  apps.py  models.py  permissions.py  setup.cfg  urls.py
wander_core/management/commands/: show_all_urls.py
wander_sample/: README.md  admin.py  apps.py  models.py  serializers.py  setup.cfg  urls.py  views.py
wander_sample/migrations/: 0001_initial.py
wander_sample/templates/wander_sample/: base.html  contact.html  index.html
wander_sample/templates/wander_sample/htmx/: contact_confirm.html  contact_form.html
wander_user/: README.md  apps.py  exceptions.py  models.py  permissions.py  signals.py  tests.py  urls.py
wander_user/migrations/: 0001_initial.py
