[metadata]
name = django-wander-core
version = 0.1.0
description = django wander application core part
url=https://github.com/a358003542/django-wander-core
long_description = file: README.md
long_description_content_type=text/markdown
author=wanze
author_email=a358003542@outlook.com
maintainer=wanze
maintainer_email=a358003542@outlook.com
license=MIT
keywords = django, python
classifiers =
    Environment :: Web Environment
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.0
